--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="row my-2">
 				<div class="col-lg-4 order-lg-1 text-center">
 					<img
-						src="//placehold.it/150"
+						src="https://placekitten.com/150"
 						class="mx-auto img-fluid img-circle d-block"
 						alt="Profile picture"
 					/>
